tests/baselines/reference/parserClassDeclaration13.errors.txt
==== tests/cases/compiler/parserClassDeclaration13.ts (1 errors) ====
    class C {
       foo();
       bar() { }
       ~~~
!!! parserClassDeclaration13.ts(3,4): error TS2239: Function overload name must be 'foo'.
    }